tests/bad/todo.nx
// print(1 + "foo")
// 
// print(1<2 and len(1))
// print(1>2 or len(1))
// 
// for x in 42:
//     print(x)
// 
// 
// x = list(range([]))
// x = list(range(7))
// print(x[7])


